# ui_components

./: .gitignore  pyproject.toml
pages/: base_page.py  login_page.py  sale_form_page.py  sale_sample_page.py
readme/: readme.md
testcases/auto_form_test/: base_form_case.py  components.py  config_form.py  form_cases.py
testcases/auto_form_test/form_cases_class/: all_type_cases.py  check_box_case.py  date_case.py  mui_select_case.py  number_case.py  number_range_case.py  radio_case.py  select_case.py  text_case.py
testcases/auto_form_test/test_form_cases/: __init__.py  test_all_type.py  test_date_case.py  test_min_max_range_case.py
testcases/auto_form_testcases/: test_all_type.py  test_sale_sample_defined_page.py
testcases/debug/test_form/: test_date.py  test_group_inputs.py  test_radio_input.py  test_text_input.py
testcases/debug/test_table/: test_table.py
testcases/test_form/: test_checkbox.py  test_select_input.py
ui_components/components/: base_component.py  table_component.py  tree_component.py
ui_components/components/auto_form_component/: component.py
ui_components/components/auto_form_component/form_cases_class/: __init__.py  all_type_cases.py  check_box_case.py  (+7 more)
ui_components/components/form_components/: __init__.py  base_component.py  base_form.py  base_input.py  checkbox_input.py  date_input.py  form_component.py  group_inputs.py  radio_input.py  select_input.py  text_input.py
ui_components/elements/: elements.py  options_elements.py
ui_components/utils/: base_actions.py  change_wait_time.py  get_driver.py  wait_options_visibility.py
