[tool.poetry]
name = "ui_components"
version = "1.0.0"
description = "平台自定义表单组件测试代码"
authors = ["linhao <15774518534@163.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
allure-pytest = "^2.9.44"
selenium = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
